@@ -59,7 +59,7 @@
 		</ul>
 	</li>
 	<li id="menu_execute">
-		<div>Run <svg viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" width="14" height="14"><path d="M4.79 2.093A.5.5 0 004 2.5v10a.5.5 0 00.79.407l7-5a.5.5 0 000-.814l-7-5z" fill="currentColor"></path></svg></div>
+		<div title="Ctrl+Enter">Run <svg viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" width="14" height="14"><path d="M4.79 2.093A.5.5 0 004 2.5v10a.5.5 0 00.79.407l7-5a.5.5 0 000-.814l-7-5z" fill="currentColor"></path></svg></div>
 	</li>
 	<li id="menu_browse">
 		<div>View on d-portal</div>
@@ -80,6 +80,9 @@
 				<div>Download HTML</div>
 			</li>
 		</ul>
+	</li>
+	<li id="menu_how">
+		<div><a href="https://github.com/notshi/dquery/blob/master/readme.md" target="_blank">How to <svg viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg" width="15" height="15"><path fill-rule="evenodd" clip-rule="evenodd" d="M8.5 4.793L11.207 7.5 8.5 10.207 7.793 9.5l1.5-1.5H4V7h5.293l-1.5-1.5.707-.707z" fill="currentColor"></path></svg></a></div>
 	</li>
 </ul>
 <div class="about"><b>dquery</b> is a read only SQL interface to IATI data</div>
