@@ -1,3 +1,9 @@
+Development Portal (2021-05-28 shi)
+==============================
+Fix typo for dquery ctrl+enter run
+Add link to dquery documentation how to
+
+
 Development Portal (2021-05-20 shi)
 ==============================
 Update dquery json type
